working, can install in jenkins, but not do anything yet

--- a/src/main/resources/net/masterthought/jenkins/Messages.properties
+++ b/src/main/resources/net/masterthought/jenkins/Messages.properties
@@ -1,5 +1,5 @@
-Plugin.DisplayName=Cucumber reports
-SidePanel.DisplayName=Cucumber reports
+Plugin.DisplayName=Insight Benchmark Report
+SidePanel.DisplayName=Insight Benchmark Report
 # ===
 BuildStatus.FAILURE=Failure
 BuildStatus.UNSTABLE=Unstable
