add wrapped report

--- a/src/main/resources/net/masterthought/jenkins/Messages.properties
+++ b/src/main/resources/net/masterthought/jenkins/Messages.properties
@@ -1,5 +1,5 @@
-Plugin.DisplayName=Ralph's Insight Benchmark Report
-SidePanel.DisplayName=Ralph's Insight Benchmark Report
+Plugin.DisplayName=Ralph Insight Benchmark Report
+SidePanel.DisplayName=Ralph Insight Benchmark Report
 # ===
 BuildStatus.FAILURE=Failure
 BuildStatus.UNSTABLE=Unstable
