update to release 1.0.0

--- a/src/main/resources/io/github/ycj28c/Messages.properties
+++ b/src/main/resources/io/github/ycj28c/Messages.properties
@@ -1,5 +1,5 @@
-Plugin.DisplayName=Ralph Insight Benchmark Report
-SidePanel.DisplayName=Ralph Insight Benchmark Report
+Plugin.DisplayName=Safe HTML Publisher
+SidePanel.DisplayName=Safe HTML Publisher
 # ===
 BuildStatus.FAILURE=Failure
 BuildStatus.UNSTABLE=Unstable
